Use StandardCharsets
To eliminate needless UnsupportedEncodingException handling.