@@ -13,11 +13,11 @@
 package org.eclipse.chemclipse.xxd.identifier.supplier.wikidata.query;
 
 import java.io.IOException;
-import java.io.UnsupportedEncodingException;
 import java.net.URI;
 import java.net.http.HttpClient;
 import java.net.http.HttpRequest;
 import java.net.http.HttpResponse;
+import java.nio.charset.StandardCharsets;
 
 import org.eclipse.chemclipse.logging.core.Logger;
 
@@ -106,7 +106,7 @@ public class QueryStructuralFormula extends AbstractQuery {
 	private static String query(String queryString) {
 
 		try {
-			String url = Wikidata.ENDPOINT + "?query=" + java.net.URLEncoder.encode(queryString, "UTF-8");
+			String url = Wikidata.ENDPOINT + "?query=" + java.net.URLEncoder.encode(queryString, StandardCharsets.UTF_8);
 			HttpRequest request = HttpRequest.newBuilder().uri(URI.create(url)) //
 												.header("Accept", "application/json") //
 												.header("User-Agent", getUserAgent()) //
@@ -124,8 +124,6 @@ public class QueryStructuralFormula extends AbstractQuery {
 					return picNode.asText();
 				}
 			}
-		} catch(UnsupportedEncodingException e) {
-			logger.error(e);
 		} catch(IOException e) {
 			logger.error(e);
 		} catch(InterruptedException e) {
